[package]
name = "rustysakari"
version = "0.1.0"
edition = "2021"
description = "TUI sakarinvillapaitapeli - a finnish classic"
license = "MIT License"
repository = "https://github.com/vilppes/rustysakari"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
